[package]
name = "mdconv"
description = "A simple cli markdown to html converter"
homepage = "https://github.com/groow-dev/mdconv"
documentation = "https://github.com/groow-dev/mdconv"
readme = "README.md"
repository = "https://github.com/groow-dev/mdconv"
version = "0.3.0"
authors = ["Tobias Tschinkowitz <tobias.tschinkowitz@icloud.com>"]
categories = ["command-line-utilities"]
keywords = ["markdown", "html", "converter"]
edition = "2018"
license = "MIT OR Apache-2.0"

[dependencies]
clap = "2.33.1"
pulldown-cmark = "0.7.1"